--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -8,7 +8,7 @@
   }
 
   @include vp-768 {
-    padding: 70px 15px;
+    padding: 90px 15px;
   }
 }
 
@@ -37,7 +37,7 @@
   @include vp-768 {
     font-size: 32px;
     letter-spacing: 0.96px;
-    margin-bottom: 50px;
+    margin-bottom: 40px;
   }
 }
 
@@ -67,7 +67,7 @@
   margin-bottom: 190px;
 
   @include vp-768 {
-    margin-bottom: 40px;
+    margin-bottom: 30px;
     text-align: center;
   }
 }
@@ -93,6 +93,10 @@
   font-weight: 700;
   line-height: normal;
   margin-bottom: 10px;
+
+  @include vp-768 {
+    margin-bottom: 10px;
+  }
 }
 
 .promo__secondary-text {
@@ -110,6 +114,7 @@
 
   @include vp-768 {
     text-align: center;
+    margin-bottom: 35px;
   }
 }
 
@@ -151,6 +156,7 @@
 
   @include vp-768 {
     flex-direction: column;
+    margin-bottom: 30px;
   }
 }
 
@@ -230,6 +236,7 @@
   }
 
   @include vp-768 {
+    padding: 30px 28px 35px;
     align-items: center;
   }
 }
