--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -12,7 +12,7 @@
 
   @include vp-768 {
     display: block;
-    padding-top: 70px;
+    padding-top: 45px;
   }
 }
 
@@ -70,7 +70,7 @@
 
   @include vp-768 {
     display: block;
-    padding: 50px 45px;
+    padding: 40px 45px 45px;
     margin-bottom: 0;
   }
 }
@@ -158,7 +158,7 @@
 
 .advantages__primary:first-of-type {
   @include vp-768 {
-    margin-bottom: 50px;
+    margin-bottom: 35px;
   }
 }
 
@@ -185,7 +185,7 @@
     max-width: 768px;
     width: 100%;
     margin-bottom: 0;
-    padding: 50px 74px;
+    padding: 40px 74px;
   }
 }
 
@@ -264,7 +264,7 @@
 
   @include vp-768 {
     margin: 0;
-    margin-bottom: 20px;
+    margin-bottom: 8px;
   }
 }
 
@@ -284,7 +284,6 @@
 
   @include vp-768 {
     margin: 0;
-    margin-bottom: 15px;
   }
 }
 
