--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -8,7 +8,7 @@
   }
 
   @include vp-768 {
-    padding: 0;
+    padding: 70px 0;
   }
 }
 
@@ -51,6 +51,7 @@
   @include vp-768 {
     font-size: 32px;
     letter-spacing: 0.96px;
+    margin-bottom: 27px;
   }
 }
 
