--- a/source/sass/blocks/faq-tabs.scss
+++ b/source/sass/blocks/faq-tabs.scss
@@ -15,7 +15,8 @@
 
   @include vp-768 {
     margin: 0 auto;
-    padding: 70px 15px;
+    padding: 55px 15px 0;
+    height: fit-content;
   }
 }
 
@@ -102,6 +103,7 @@
     min-width: 140px;
     width: 140px;
     height: 44px;
+    margin-bottom: 0;
   }
 
   &.is-active {
@@ -127,7 +129,7 @@
   width: 100%;
 
   @media screen and (max-width: 767px) {
-    padding: 15px;
+    padding: 15px 0 0;
   }
 
   p {
