--- a/source/sass/blocks/info.scss
+++ b/source/sass/blocks/info.scss
@@ -45,7 +45,7 @@
   }
 
   @include vp-768 {
-    padding: 70px 15px;
+    padding: 60px 15px 65px;
   }
 }
 
@@ -59,7 +59,7 @@
   }
 
   @include vp-768 {
-    padding: 70px 15px;
+    padding: 65px 15px 65px;
   }
 }
 
@@ -82,6 +82,7 @@
     font-size: 32px;
     font-weight: 600;
     letter-spacing: 0.96px;
+    margin-bottom: 20px;
   }
 }
 
@@ -124,6 +125,7 @@
 
   @include vp-768 {
     flex-direction: column;
+    justify-content: flex-start;
     margin-bottom: 40px;
   }
 }
@@ -190,7 +192,7 @@
   @include vp-768 {
     padding-right: 0;
     border: none;
-    margin-bottom: 35px;
+    margin-bottom: 22px;
   }
 }
 
