--- a/source/sass/blocks/tabs.scss
+++ b/source/sass/blocks/tabs.scss
@@ -19,6 +19,7 @@
 
   @media screen and (max-width: 767px) {
     flex-wrap: wrap;
+    margin-bottom: 35px;
   }
 }
 
@@ -126,7 +127,7 @@
   }
 
   @include vp-768 {
-    padding: 40px;
+    padding: 45px 35px;
   }
 }
 
@@ -167,7 +168,7 @@
   margin-bottom: 73px;
 
   @include vp-768 {
-    margin-bottom: 50px;
+    margin-bottom: 10px;
   }
 }
 
@@ -204,6 +205,7 @@
   @include vp-768 {
     margin-top: -85px;
     font-size: 48px;
+    margin-bottom: 24px;
   }
 }
 
@@ -224,9 +226,11 @@
   outline: solid 2px $color-default-blue;
   border: none;
   cursor: pointer;
+  text-align: center;
 
   @include vp-768 {
     padding: 24px;
+    width: 100%;
   }
 }
 
