--- a/source/sass/global/utils.scss
+++ b/source/sass/global/utils.scss
@@ -69,3 +69,8 @@
 .js-focus-visible :focus:not(.focus-visible) {
   outline: none;
 }
+
+.swiper-button-prev::after,
+.swiper-button-next::after {
+  display: none;
+}
