--- a/css/style.css
+++ b/css/style.css
@@ -1557,6 +1557,11 @@ button,
   outline: none;
 }
 
+.swiper-button-prev::after,
+.swiper-button-next::after {
+  display: none;
+}
+
 .container {
   width: 100%;
   margin: 0 auto;
@@ -2541,6 +2546,10 @@ button,
   right: 0;
 }
 
+.catalog__tabs {
+  width: 1366px;
+}
+
 [data-tabs=parent] {
   overflow: hidden;
 }
@@ -2583,10 +2592,6 @@ button,
   z-index: 1;
   visibility: visible;
   opacity: 1;
-}
-
-.catalog__tabs {
-  width: 1366px;
 }
 
 .tabs__controls {
