--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -21,7 +21,7 @@
 .header__nav {
   max-width: 1366px;
   margin: 0 auto;
-  padding: 30px 103px;
+  padding: 30px 0;
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
