--- a/source/sass/blocks/gym.scss
+++ b/source/sass/blocks/gym.scss
@@ -10,6 +10,12 @@
   padding: 120px 103px 235px;
 
   @include vp-1366 {
+    max-width: 1366px;
+    margin: 0 auto;
+    padding: 120px 103px 235px;
+  }
+
+  @include vp-1200 {
     padding: 100px 45px 183px;
   }
 
@@ -24,7 +30,11 @@
   align-items: flex-start;
   padding-left: 60px;
 
-  @media (max-width: $vp-1366) {
+  @include vp-1366 {
+    padding-left: 0;
+  }
+
+  @include vp-1200 {
     flex-direction: column;
     align-items: center;
     padding-left: 0;
@@ -34,13 +44,19 @@
 .gym__description {
   max-width: 355px;
   padding-top: 40px;
+  margin-right: 85px;
 
-  @media (max-width: $vp-1366) {
+  @include vp-1366 {
+    margin-right: 20px;
+  }
+
+  @include vp-1200 {
     display: flex;
     flex-direction: column;
     align-items: center;
     max-width: 502px;
     padding-top: 0;
+    margin-right: 0;
   }
 
   @media (max-width: $vp-768) {
@@ -58,7 +74,7 @@
   padding: 0;
   margin-bottom: 8px;
 
-  @media (max-width: $vp-1366) {
+  @include vp-1200 {
     font-size: 42px;
     letter-spacing: 1.26px;
     margin-bottom: 0;
@@ -80,7 +96,7 @@
   padding: 0;
   margin-bottom: 38px;
 
-  @media (max-width: $vp-1366) {
+  @include vp-1200 {
     margin-bottom: 32px;
   }
 
@@ -96,7 +112,7 @@
   font-weight: 300;
   line-height: 24px;
 
-  @media (max-width: $vp-1366) {
+  @include vp-1200 {
     text-align: center;
   }
 
@@ -106,7 +122,7 @@
 }
 
 .gym__text--hidden {
-  @media (max-width: $vp-1366) {
+  @include vp-1200 {
     display: none;
   }
 
@@ -118,7 +134,7 @@
 .gym__text:not(:last-child) {
   margin-bottom: 10px;
 
-  @media (max-width: $vp-1366) {
+  @include vp-1200 {
     margin-bottom: 45px;
   }
 
@@ -129,8 +145,9 @@
 
 .gym__image {
   max-width: 660px;
+  margin: 0 auto;
 
-  @media (max-width: $vp-1366) {
+  @include vp-1200 {
     width: 678px;
     height: 345px;
   }
@@ -142,7 +159,7 @@
 }
 
 .gym__image picture img {
-  @media (max-width: $vp-1366) {
+  @include vp-1200 {
     width: 678px;
     height: 345px;
     object-fit: cover;
@@ -158,24 +175,5 @@
 
 .gym-visual {
   position: relative;
-}
-
-.gym__video {
-  position: absolute;
-  width: 364px;
-  top: 288px;
-  left: -63px;
-
-  @media (max-width: $vp-1366) {
-    width: 266px;
-    position: absolute;
-    top: 75%;
-    left: 30%;
-  }
-
-  @media (max-width: $vp-768) {
-    position: static;
-    width: 100%;
-    margin: 0 auto;
-  }
+  width: 100%;
 }
