--- a/source/sass/blocks/info.scss
+++ b/source/sass/blocks/info.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
 
-  @include vp-1366 {
+  @include vp-1200 {
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
@@ -15,7 +15,7 @@
   display: flex;
   justify-content: flex-end;
 
-  @include vp-1366 {
+  @include vp-1200 {
     width: 100%;
     display: block;
   }
@@ -24,7 +24,7 @@
 .info__contacts {
   width: 50%;
 
-  @include vp-1366 {
+  @include vp-1200 {
     width: 100%;
     display: flex;
     justify-content: flex-start;
@@ -40,12 +40,17 @@
   padding: 56px 170px 60px 103px;
 
   @include vp-1366 {
+    padding-right: 90px;
+  }
+
+  @include vp-1200 {
     max-width: 100%;
-    padding: 60px 133px 65px;
+    padding: 60px 160px 65px 103;
   }
 
   @include vp-768 {
     padding: 60px 15px 65px;
+    display: block;
   }
 }
 
@@ -53,9 +58,9 @@
   max-width: 683px;
   padding: 56px 159px 60px 120px;
 
-  @include vp-1366 {
+  @include vp-1200 {
     max-width: 100%;
-    padding: 60px 0 65px 133px;
+    padding: 60px 0 65px 103px;
   }
 
   @include vp-768 {
@@ -72,7 +77,7 @@
   margin: 0;
   margin-bottom: 10px;
 
-  @include vp-1366 {
+  @include vp-1200 {
     font-size: 42px;
     font-weight: 700;
     letter-spacing: 1.26px;
@@ -94,7 +99,7 @@
   margin: 0;
   margin-bottom: 38px;
 
-  @include vp-1366 {
+  @include vp-1200 {
     font-size: 42px;
     font-weight: 600;
     letter-spacing: 1.26px;
@@ -117,7 +122,7 @@
   gap: 30px;
   margin-bottom: 25px;
 
-  @include vp-1366 {
+  @include vp-1200 {
     justify-content: flex-start;
     gap: 60px;
     margin-bottom: 30px;
@@ -143,7 +148,7 @@
   text-transform: uppercase;
   cursor: pointer;
 
-  @include vp-1366 {
+  @include vp-1200 {
     width: 472px;
   }
 
@@ -160,7 +165,7 @@
   justify-content: space-between;
   padding-left: 4px;
 
-  @include vp-1366 {
+  @include vp-1200 {
     padding-left: 0;
     width: 100%;
   }
@@ -172,7 +177,7 @@
 }
 
 .info__column:last-child {
-  @include vp-1366 {
+  @include vp-1200 {
     padding-left: 45px;
   }
 
@@ -185,7 +190,7 @@
   padding-right: 60px;
   border-right: solid 1px #74819c;
 
-  @include vp-1366 {
+  @include vp-1200 {
     padding-right: 50px;
   }
 
@@ -205,7 +210,7 @@
   font-weight: 700;
   margin-bottom: 3px;
 
-  @include vp-1366 {
+  @include vp-1200 {
     font-size: 20px;
     line-height: 30px;
     margin-bottom: 3px;
@@ -220,7 +225,7 @@
   font-weight: 400;
   line-height: 152.34%;
 
-  @include vp-1366 {
+  @include vp-1200 {
     font-size: 18px;
   }
 }
